Full screen on mobile view fix.

--- a/javascript-calculator/css/style.css
+++ b/javascript-calculator/css/style.css
@@ -6,7 +6,8 @@
     margin: 0;
 }
 
-body{
+html{
+  height:100%;
   background-image: url(https://image.ibb.co/jmUp75/bk.jpg);
   background-position: center center;
   background-repeat: no-repeat;
